static/css/mediaqueries.css
@media screen and (max-width: 1025px) {
    .logo-text h1 {
        font-size: 90px;
    }
    .logo-text h2 {
        font-size: 40px;
    }

    #btc-gif {
        width: 80px;
        height: 80px;
    }

    #refresh-div {
        width: 50%;
    }

    .wallet-info-div {
        width: 80%;
    }

    #receive-div , #send-div, #withdraw-div{
        width: 80%;
    }

    .educational-div {
        width: 80%;
    }
}

@media screen and (max-width: 769px) {
    .logo-text h1 {
        font-size: 100px;
    }
    .logo-text h2 {
        font-size: 60px;
    }

    #public-address-text {
        font-size: 22px;
    }
    #private-key {
        width: 100%;
    }
    #private-key-text {
        word-wrap: break-word;
        max-width: 80%;
        margin: 0 auto;
        font-size: 20px;
    }
    #refresh-div {
        width: 70%;
    }
}


@media screen and (max-width: 600px) {
    .intro-div {
        margin: 0 auto;
    }
    .logo-text h1 {
        font-size: 70px;
    }
    .logo-text h2 {
        font-size: 40px;
    }
    #btc-gif {
        width: 60px;
        height: 60px;
    }

    .newspaper-clipping {
        max-width: 90%;
        height: 250px;
    }

    .login-and-register-buttons-div {
        max-width: 90%;
        margin: 0 auto;
        flex-direction: column;
        margin-top: 3vh;
    }

    .login-form-wrapper h2, .register-form-wrapper h1 {
        margin-top: 0vh;
        font-size: 22px;
    }

    .header-text h2 {
        font-size: 19px;
    }
    .navigation-links-div {
        flex-direction: column;
    }
    .logout-button {
        margin-top: 10px;
    }
    .nav-button {
        font-size: 15px;
    }
    .standard-button {
        font-size: 17px;
    }
    .send-receive-div {
        flex-direction: column;
        align-items: center;
    }
    #refresh-div {
        width: 80%;
    }
    #public-address-text {
        font-size: 20px;
        word-wrap: break-word;
        max-width: 100%;
        margin: 0 auto;
    }
    #header {
        font-size: 15px;
        max-width: 90%;
        margin: 0 auto;
        margin-top: 5vh;
    }
    .info-text {
        font-size: 14px;
        max-width: 90%;
        margin: 0 auto;
    }

    #receive-div , #send-div, #withdraw-div {
        font-size: 15px;

    }
    .receive , .send , .withdraw {
        width: 95%;
    }
    #private-key {
        margin: 0 auto;
        width: 90%;
        margin-top: 2vh;
    }

    .qr-code {
        margin-top: 2vh;
    }

    .header-text h1 {
        font-size: 20px;
    }

    .header-text h2 {
        font-size: 18px;
    }

}

